[ADMIN] Fix session list table header overflow on Firefox

--- a/admin/app/styles/misc/table-admin.scss
+++ b/admin/app/styles/misc/table-admin.scss
@@ -26,7 +26,7 @@
 }
 
 .table-admin__auto-width {
-  width: auto;
+  table-layout: auto;
 }
 
 .table-admin-input {
